* SVN *

* Fix admin overview date timezone.  [Ben Wyrosdick]

* Extract template rendering code to separate handler class, add support for alternate template handlers. [Pascal Belloncle]

* Add {{ article.next }} and {{ article | next: section }} for paginating articles [Pascal Belloncle]

* [converters] initial movable type support [sd]

* [converters] use no filter for wordpress articles

* Small bug fixes
  - show correct asset thumbnail url
  - assert with correct named asset resource route
  - add missing fixtures for About Section Feed Test
  - update asset labeling tests to reflect current behavior

* RESTRICT hyphens as a possible separator for permalink styles. [Chris Wanstrath]

* Initial article/asset assignment support.  Perfect for podcasting.  

* Raise MissingThemesError if Site#theme is nil

* RIP: Site#search_layout

* Add link_to_search_result filter that uses either a paged or blog permalink, depending on the search section.

* Allow search page to take ?s parameter to specify section path.  

  * nil (default)     - all sections
  * '' (empty string) - home section
  * 'foo/bar'         - given section

* Initial Plugin Whammy Jammy [Nick Faiz, Rick Olson]

* link_to_section adds class='selected' for the current section [Tammo Freese]

* Process article permalinks with Iconv.

* Support rel-tag microformat by default in liquid filters

* Make ImageScience the default image processor for assets. 
  If you wish to configure this, set ASSET_IMAGE_PROCESSOR to one of 3 values in environment.rb
  
    ASSET_IMAGE_PROCESSOR = :image_science || :rmagick || :none

* paged section feeds will show the paged url for articles instead of the long permalink.

* Replace a couple @article.full_permalink instances with @site.permalink_for(@article) [defunkt]

# Allow Resource#non_image_extnames to be overridden by plugins [myles_b]

* filter password fields in logs [chrissturm]

* add *.ico to list of approved extensions for theme resources [myles_b]
