@@ -25,7 +25,7 @@ module Mephisto
       map.connect ':controller/:action/:id/:version', :version => nil, :controller => /routing_navigator|account|(admin\/\w+)/, :id => /[^\/]*/
 
       yield if block_given?
-      MephistoPlugin.custom_routes.each do |path, options|
+      Mephisto::Plugin.custom_routes.each do |path, options|
         map.connect path, options
       end
       
