@@ -1,10 +1,12 @@
-module MephistoPlugins
-  class TestPlugin < MephistoPlugin
-    homepage 'http://foo.com'
-    author 'Captain Problematic'
-    version 'deathstar'
-
-    option :config, 'one' => 'test'
-    option :notes, 'notes'
+module Mephisto
+  module Plugins
+    class TestPlugin < Mephisto::Plugin
+      homepage 'http://foo.com'
+      author 'Captain Problematic'
+      version 'deathstar'
+    
+      option :config, 'one' => 'test'
+      option :notes, 'notes'
+    end
   end
 end
