@@ -4,35 +4,35 @@ class PluginTest < Test::Unit::TestCase
   fixtures :mephisto_plugins
 
   def test_should_create_plugin_name
-    assert_equal 'plugin_whammy_jammy', MephistoPlugins::PluginWhammyJammy.plugin_name
+    assert_equal 'plugin_whammy_jammy', Mephisto::Plugins::PluginWhammyJammy.plugin_name
   end
   
   def test_should_find_plugin_class_by_name
-    assert_equal MephistoPlugins::PluginWhammyJammy, MephistoPlugin.find_class(:plugin_whammy_jammy)
+    assert_equal Mephisto::Plugins::PluginWhammyJammy, Mephisto::Plugin.find_class(:plugin_whammy_jammy)
   end
   
   def test_should_not_find_missing_class
     assert_raises NameError do
-      MephistoPlugin[:blah]
+      Mephisto::Plugin[:blah]
     end
   end
   
   def test_should_not_find_a_non_model
-    assert MephistoPlugins.const_defined?(:NonPlugin)
+    assert Mephisto::Plugins.const_defined?(:NonPlugin)
     assert_raises NameError do
-      MephistoPlugin[:non_plugin]
+      Mephisto::Plugin[:non_plugin]
     end
   end
   
   def test_plugin_option_defaults
-    plugin = MephistoPlugins::PluginWhammyJammy.new
+    plugin = Mephisto::Plugins::PluginWhammyJammy.new
     assert_equal 'one', plugin.foo
     assert_equal 2,     plugin.bar
     assert_equal [3],   plugin.baz
   end
   
   def test_should_set_plugin_options
-    plugin = MephistoPlugins::PluginWhammyJammy.new
+    plugin = Mephisto::Plugins::PluginWhammyJammy.new
     
     plugin.foo = 'two'
     plugin.bar = 3
@@ -51,19 +51,19 @@ class PluginTest < Test::Unit::TestCase
   def test_should_get_and_set_plugin_properties
     properties = %w(notes author version homepage)
     properties.each do |property|
-      assert_nil MephistoPlugins::PluginWhammyJammy.send(property)
-      MephistoPlugins::PluginWhammyJammy.send(property, 'foo')
-      assert_equal 'foo', MephistoPlugins::PluginWhammyJammy.send(property)
-      assert_equal 'foo', MephistoPlugins::PluginWhammyJammy.new.send(property)
+      assert_nil Mephisto::Plugins::PluginWhammyJammy.send(property)
+      Mephisto::Plugins::PluginWhammyJammy.send(property, 'foo')
+      assert_equal 'foo', Mephisto::Plugins::PluginWhammyJammy.send(property)
+      assert_equal 'foo', Mephisto::Plugins::PluginWhammyJammy.new.send(property)
     end
   end
   
   def test_should_find_plugin
-    assert_equal MephistoPlugins::PluginWhammyJammy.find(1), MephistoPlugin[:plugin_whammy_jammy]
+    assert_equal Mephisto::Plugins::PluginWhammyJammy.find(1), Mephisto::Plugin[:plugin_whammy_jammy]
   end
   
   def test_should_persist_options
-    plugin = MephistoPlugin[:plugin_whammy_jammy]
+    plugin = Mephisto::Plugin[:plugin_whammy_jammy]
     assert_equal 'one', plugin.foo
     plugin.foo = 'two'
     plugin.save!
@@ -71,8 +71,8 @@ class PluginTest < Test::Unit::TestCase
   end
   
   def test_should_persist_options_on_new_plugin_record
-    MephistoPlugins::PluginWhammyJammy.delete_all
-    plugin = MephistoPlugin[:plugin_whammy_jammy]
+    Mephisto::Plugins::PluginWhammyJammy.delete_all
+    plugin = Mephisto::Plugin[:plugin_whammy_jammy]
     klass1 = plugin.class.name
     
     assert plugin.new_record?
@@ -80,7 +80,7 @@ class PluginTest < Test::Unit::TestCase
     plugin.save!
     assert plugin.reload.options.empty?
 
-    plugin2 = MephistoPlugin[:plugin_whammy_jammy]
+    plugin2 = Mephisto::Plugin[:plugin_whammy_jammy]
     assert_equal 'one', plugin2.foo   
     reloaded_klass = plugin2.class.name
     
@@ -94,7 +94,7 @@ class PluginTest < Test::Unit::TestCase
   end
   
   # def test_should_load_or_initialize_plugin_list
- #    plugins = MephistoPlugin.load(%w(plugin_whammy_jammy foo_bar baz))
+ #    plugins = Mephisto::Plugin.load(%w(plugin_whammy_jammy foo_bar baz))
  #    assert_equal 2, plugins.size
  #    assert plugins['foo_bar'].new_record?
  #  end
